--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,26 @@ body {
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
-  /* matches button weight */
   color: var(--color-text-primary);
+  overflow-x: hidden;
+  height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background: var(--color-secondary);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-secondary);
+  border-radius: 10px;
+  border: 2px solid var(--color-secondary);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-accent);
+  border-radius: 10px;
+  
 }
 
 /* Palette */
@@ -131,6 +149,27 @@ header button a {
 
 }
 
+
+/* footer */
+
+footer {
+  text-align: center;
+  padding: 1rem;
+  background: var(--color-primary);
+  color: var(--color-text-invert);
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.main-container-home {
+ min-height: calc(100% - 248px);
+}
+
+.main-container-knowledge {
+ min-height: calc(100% - 232px);
+}
 
 /* aboutme page */
 
@@ -332,3 +371,4 @@ header button a {
 .skill-item > summary::marker {
   content: none;          /* Firefox */
 }
+
